src/test/error/comment.c
// this is a comment
int main() {
    /**
     * This is a multi row comment
     /
     int a;
     a = 10;
     print("%d", a);
}